[package]
name = "pretex"
version = "0.1.0"
authors = ["Marc Owen Rentap"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
lalrpop-util = { version = "0.20.0", features = ["lexer"] }

[dependencies.regex]
version = "1.5"
default-features = false
features = ["std", "unicode-perl"]

[build-dependencies]
lalrpop = "0.20.0"
